# qrcode-generator-tui

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
locale/: en_US.ftl  zh_CN.ftl
src/: app.rs  command.rs  generator.rs  i18n.rs  main.rs  ui.rs
