[package]
name = "qrcode-generator-tui"
version = "0.1.1"
authors = ["LingLambda <abc1514671906@163.com>"]
license = "MIT"
edition = "2021"

[dependencies]
# tui
crossterm = "0.28.1"
ratatui = "0.29.0"
tui-textarea = "0.7.0"
#command
clap = { version = "4.5.43", features = ["derive"] }
# encoding
encoding_rs = "0.8.35"
chardetng = "0.1.17"
# i18n
fluent-bundle = "0.16.0"
fluent-resmgr = "0.0.7"
unic-langid = "0.9.6"
# other
qrcode = "0.14.1"
image = "0.25.8"
once_cell = "1.21.3"